# krti2025-simulation

./: .gitignore  README.md
krti2024/: color.json  run_vision.sh
krti2024/src/krti2023/: .gitignore  .gitmodules  CMakeLists.txt  SIM_final.param  setup.py
krti2024/src/krti2023/launch/: full.launch  gazebo_only.launch  main.launch  mavros_only.launch  sensors.launch  sim_only.launch  vision.launch
krti2024/src/krti2023/launch/config/: custom.yaml
krti2024/src/krti2023/scripts/: startsitl.sh
krti2024/src/krti2023/test/: test_drone_api.py
krti2024/src/krti2023/worlds/: arena_2023 (copy).txt  arena_2023.world  bashrc.txt
krti2024/src/krti2023_pi/: .gitmodules  CMakeLists.txt  package.xml  setup.py
krti2024/src/krti2023_pi/cpp_projects/: binding.cpp  helloworld  helloworld.cpp  test_binding.py
krti2024/src/krti2023_pi/launch/: krti2023.launch  main.launch  mavros_only.launch  vision.launch
krti2024/src/krti2023_pi/scripts/: startsitl.sh
krti2024/src/krti2023_pi/src/: main.py  main_gazebo.py  vision.py
krti2024/src/krti2023_pi/src/krti2023_pi/: README.md  drone_api.py  pid.py
krti2024/src/krti2023_pi/src/krti2023_pi/config/: custom.yaml
krti2024/src/krti2023_pi/test/: pid.py  tes_opencv.py  tesss.py  test_drone_api.py
krti2024/src/krti2023_pi/tools/: .gitignore  README.md
krti2024/src/krti2023_pi/tools/PID_dronekit/scripts/: dronekit_pid.py
krti2024/src/krti2023_pi/tools/get_hsv_value/: README.md
krti2024/src/krti2023_pi/tools/get_hsv_value/scripts/: color.json
krti2024/src/krti2023_pi/tools/tracking_algorithm/: CMakeLists.txt  tracking.cpp
krti2025_bringup/: CMakeLists.txt  README.md  package.xml
krti2025_bringup/config/: apm_pluginlists_vio.yaml
krti2025_bringup/launch/: real.launch  sim.launch
krti2025_bringup/scripts/: start_sim.sh
krti2025_pi/: .gitignore  .gitmodules  CMakeLists.txt  README.md  first_thing_u_must_do.txt  setup.py  show_image.txt  tahapan_setup_ros_desktop.sh  tahapan_setup_ros_full.sh
krti2025_pi/.catkin_tools/profiles/default/: devel_collisions.txt
krti2025_pi/cpp_projects/: cppmult.cpp  cppmult.hpp  hello  setup.py
krti2025_pi/launch/: ego_viz.rviz  krti2024.launch  main.launch  mavros_only.launch  sim_ego.launch  vision.launch  vision_sim.launch
krti2025_pi/rviz/: ego_planner.rviz
krti2025_pi/scripts/: startsitl.sh
krti2025_pi/src/: coba_main1.py  debug_payload.py  lidar.py  main.py  main_coment.py  main_copy.py  pid.py  tes_main.py  trial.py  vins_to_mavros.py  vision.py
krti2025_pi/src/krti2023_pi/: drone_api.py
krti2025_pi/src/krti2023_pi/config/: custom.yaml
krti2025_pi/srv/: Activate.srv
krti2025_pi/tools/: debug_camera.py
krti2025_pi/tools/tracking_algorithm/: tracking.py
planner/plan_manage/launch/: advanced_param.xml  simple_run.launch  swarm.launch
(+8 files in other folders)
